resources/css/style.css
@charset "UTF-8";
/* CSS Document */


/*  Global Styles  */
html {
	font-size: 14px;
	margin: 0;
}

body {
	margin: 0 auto;
	padding: 0;
	height: auto;
	font-family: "Open Sans", sans-serif;
  	line-height: 1.4;
}

.container {
	width: 100%;
	margin: 0 auto;
	margin-top: -5rem;
}

.relative-wrapper {
	position: relative;
	top: -14rem;
	height: auto;
	padding: 0;
	margin: 0;
	
	display: flex;
	width: 100%;
	justify-content: center;
}

.relative-wrapper a {
	font-size: 14px;
	padding: 1.3rem 0;
}

.btn {
	
}

.button {
	width: 11.4rem;
	height: auto;
	padding: 1.3rem;
	background-color: #399bd1;
	color: #ffffff;
	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
	margin: 0 auto;
	border: none;
	border-radius: 8px;
	font-size: 14pt;
	font-weight: normal;
	display: flex;
	justify-content: center;
}

h1 {
	font-size: 1.7rem;
	font-weight: bold;
	color: #399bd1;
	padding-top: 1rem;
	padding-bottom: 1.4rem;
}

h2 {
	font-size: 1.3rem;
	font-weight: bold;
	padding: 20px 0 5px 0;
}

.image-container {
	overflow: hidden;
}

.image-container img {
  opacity: 0.7;
}

.image-container img:hover {
	opacity: 1;
	transform: scale(1.3);
	overflow: hidden;
	transition-duration: 0.5s;
}

.blue {
	color: #399bd1;
}

.author {}

/* Bootstrap Overrides */

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover {
  background-color: inherit;
  color: #399bd1;
}

.btn-primary {
  width: 160px;
  padding: 1.3rem 0;
  border: 0;
  margin-top: 2.8rem;
  background-color: #399bd1;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
  transition: .5s box-shadow;
}

.btn-primary:hover {
  background-color: #399bd1;
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
}

.btn-primary:active {
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
}

nav li {
	display: inline-flex;
}

/* Slick Overrides */

.slick-slide {
  outline: none;
}

/*  Top Nav Bar  */

nav {
	display: inline-flex;
}

nav li {
	display: inline-flex;
}

.navbar {
	margin: 0;
	padding: 1rem 0;
}

.navbar ul {
	margin: 0;
	font-size: 1.1rem;
	font-weight: bold;
	display: inline-flex;
}

.navbar ul a {
	padding-left: 20px;
	color: rgba(0, 0, 0, 0.7);
	text-decoration: none;
}

.navbar ul a:hover {
	color: #399bd1;
}

@media only screen and (max-width: 550px) {
	.navbar ul {
		display: inline-flex;
		width: 100%;
		flex-direction: column;
	}
	
	.navbar ul a {
		padding: 5px 0;
	}
}

.logo {
	height: auto;
	max-width: 178px;
	width: auto;
	padding-right: 15px;
}

@media only screen and (max-width: 550px) {
	.logo {
		display: none;
	}
}

.logo img {
	height: 50%;
	width: auto;
}

/*  Jumbotron Main Banner  */

.carousel {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
}

.jumbotron {
	background-size: cover;
	background-position: center;
	padding: 0;
	margin: 0;
	/*padding-bottom: 8rem;*/
	height: 44rem;
	width: 100%; 
    text-align: center;
}

.jumbotron img {
	height: 100%;
}

.jumbo-title {
	color: white;
	text-shadow: -1px -1px 0 #000,
					1px -1px 0 #000,
					-1px 1px 0 #000,
					1px 1px 0 #000;
	text-align: center;
	font-weight: normal;
	padding-top: 11.85rem;
}

.jumbotron h1 {
	font-size: 7.1rem;
	font-family: Monoton;
}
	

@media only screen and (max-width: 800px) {
	.jumbotron h1 {
		font-size: 5.7rem;
	}
}

.jumbotron p {
	width: 90%;
	max-width: 51.3rem;
	font-size: 1.1rem;
	text-align: center;
	font-weight: 400;
	color: #ffffff;
	margin: auto;
	/*padding-bottom: 2.8rem;*/
	padding-top: 0;
	text-shadow: -1px -1px 0 #000,
					1px -1px 0 #000,
					-1px 1px 0 #000,
					1px 1px 0 #000;
}

.jumbotron-bike {
	background-image: url(../images/jumbotron-bike.jpg);

	background-size: cover;
	background-position: center;
}

.jumbotron-beer {
	background-image: url(../images/jumbotron-beer.jpg);
	background-size: cover;
	background-position: center;
}

.jumbotron-flowers {
	background-image: url(../images/jumbotron-flowers.jpg);
	background-size: cover;
	background-position: center;
}

.jumbotron-duffel {
	background-image: url(../images/jumbotron-duffel.jpg);
	background-size: cover;
	background-position: center;
}

/*  Featured Project  */

.featured-proj {
	padding: 0 2%;
	overflow: hidden;
}

.featured-proj a:hover img {
	width: 120%;
	height: auto;
	background-position: center;
	transition-duration: 0.25s;
	
	align-items: center;
	align-content: center;
}

.featured-proj img {
	width: 100%;
	height: auto;
}



/*  Projects  */

.projects {
	padding: 0 2%;
	padding-bottom: 5.85rem;
	height: auto;
}

.project {
	padding-bottom: 0;
	margin-bottom: 0;
	height: auto;
}

.project img {
	width: 100%;
	height: auto;
	display: block;
}

.project .image-container {
	width: 100%;
	height: 30%;
	background-size: cover;
	background-position: center;
	display: block;
	overflow: hidden;
}

@media only screen and (max-width: 800px) {
	.project .image-container {
		width: 100%;
		height: 40%;
	}
}

/*.img-1 {
	background-image: url(../images/project1.png);
}

.img-2 {
	background-image: url(../images/project2.png);
}

.img-3 {
	background-image: url(../images/project3.png);
}*/

/*  Footer  */

footer {
	background-color: #f3f3f3;
	width: 100%;

/*	display: inline-flex;
	justify-content: center; */
}

.cta {
	font-size: 2.5rem;
	font-weight: bold;
	color: rgba(0, 0, 0, 0.7);
	padding: 5.2rem 0;
	text-align: center;
}

footer p {
	max-width: 42rem;
	padding-bottom: 2.8rem;
	text-align: center;
	margin: auto;
}

footer button {
	margin-bottom: 5rem;
}

.button-container {
	display: flex;
}

